# casita

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  FindOTF2.cmake  README  TODO  beautify  casita_uncrustify.cfg
otf_analyzer/: AnalysisEngine.cpp  CDMRunner.cpp  CMakeLists.txt  MPIAnalysis.cpp  Parser.cpp  otf_analyzer.cpp
otf_analyzer/include/: AbstractRule.hpp  AnalysisEngine.hpp  BlameDistribution.hpp  CDMRunner.hpp  ErrorUtils.hpp
otf_analyzer/include/cuda/: BlameKernelRule.hpp  BlameSyncRule.hpp  EventLaunchRule.hpp  EventQueryRule.hpp  EventSyncRule.hpp  KernelLaunchRule.hpp  LateSyncRule.hpp  StreamWaitRule.hpp
otf_analyzer/include/mpi/: AllToOneRule.hpp  CollectiveRule.hpp  MPIRulesCommon.hpp  OneToAllRule.hpp  RecvRule.hpp  SendRecvRule.hpp  SendRule.hpp
otf_analyzer/include/omp/: OMPBarrierRule.hpp  OMPComputeRule.hpp  OMPParallelRegionRule.hpp  OMPRulesCommon.hpp
trunk/code/: CMakeLists.txt  COPYING  ChangeLog
trunk/code/common/: Allocation.cpp  Graph.cpp  OTF1ParallelTraceWriter.cpp  OTF1TraceReader.cpp  OTF1TraceWriter.cpp  OTF2ParallelTraceWriter.cpp  OTF2TraceReader.cpp  TraceData.cpp
trunk/code/common/include/: CounterTable.hpp  Process.hpp  TraceData.hpp  common.hpp
trunk/code/common/include/graph/: Edge.hpp  EventNode.hpp  Graph.hpp  GraphNode.hpp  Node.hpp  RemoteGraphNode.hpp
trunk/code/common/include/otf/: IParallelTraceWriter.hpp  ITraceReader.hpp  ITraceWriter.hpp  OTF1KeyValueList.hpp  OTF1ParallelTraceWriter.hpp  OTF1TraceReader.hpp  OTF1TraceWriter.hpp  OTF2KeyValueList.hpp  OTF2ParallelTraceWriter.hpp  OTF2TraceReader.hpp
trunk/code/doc/: README  casita_uncrustify.cfg
trunk/code/example_traces/iumd/: md_mpi_cuda.100004.events.z  md_mpi_cuda.2.events.z  md_mpi_cuda.4.events.z
trunk/code/example_traces/jacobi_blame_cpu/: jacobi_cuda.0.def.z  jacobi_mpi+cuda.1.events.z  jacobi_mpi+cuda.100002.events.z  jacobi_mpi+cuda.2.events.z
trunk/code/example_traces/jacobi_blame_gpu/: jacobi_cuda.100001.events.z  jacobi_mpi+cuda.1.events.z  jacobi_mpi+cuda.100001.events.z  jacobi_mpi+cuda.2.events.z
trunk/code/example_traces/matrixMul/: matrixMul.0.def.z  matrixMul.1.events.z  matrixMul.100001.events.z
trunk/code/example_traces/vectorAdd/: vectorAdd.1.events.z
trunk/code/otf_analyzer/: AnalysisEngine.cpp  CDMRunner.cpp  CMakeLists.txt  MPIAnalysis.cpp  Parser.cpp  otf_analyzer.cpp
trunk/code/otf_analyzer/include/: AnalysisEngine.hpp  BlameDistribution.hpp  CDMRunner.hpp  MPIAnalysis.hpp  Parser.hpp
trunk/code/otf_analyzer/include/cuda/: BlameKernelRule.hpp  BlameSyncRule.hpp  EventLaunchRule.hpp  EventQueryRule.hpp  LateSyncRule.hpp  StreamWaitRule.hpp
trunk/code/otf_analyzer/include/mpi/: CollectiveRule.hpp  MPIRulesCommon.hpp  OneToAllRule.hpp  RecvRule.hpp  SendRecvRule.hpp  SendRule.hpp
trunk/code/otf_analyzer/include/omp/: OMPBarrierRule.hpp  OMPComputeRule.hpp  OMPParallelRegionRule.hpp  OMPRulesCommon.hpp
trunk/code/otf_gen/: CMakeLists.txt  otf_gen.cpp
trunk/code/otf_gen/include/: EventQueryPattern.hpp  MultiBlameKernelPattern.hpp  MultiLateSyncPattern.hpp  NullStreamPattern.hpp  SingleBlameSyncPattern.hpp  StreamWaitPattern.hpp
trunk/code/src/analysis/: AnalysisEngine.cpp  AnalysisParadigmCUDA.cpp  AnalysisParadigmMPI.cpp  AnalysisParadigmOMP.cpp  AnalysisParadigmOpenCL.cpp  CallbackHandler.cpp  MPIAnalysis.cpp  Statistics.cpp
trunk/code/src/analysis/include/: AbstractRule.hpp  AnalysisEngine.hpp  BlameDistribution.hpp  CallbackHandler.hpp  IAnalysisParadigm.hpp  MPIAnalysis.hpp  Statistics.hpp
trunk/code/src/analysis/include/cuda/: AnalysisParadigmCUDA.hpp  BlameKernelRule.hpp  BlameSyncRule.hpp  EventLaunchRule.hpp  EventQueryRule.hpp  EventSyncRule.hpp  ICUDARule.hpp  KernelExecutionRule.hpp  KernelLaunchRule.hpp  LateSyncRule.hpp  StreamWaitRule.hpp
trunk/code/src/analysis/include/mpi/: AllToOneRule.hpp  AnalysisParadigmMPI.hpp  CollectiveRule.hpp  IRecvRule.hpp  ISendRule.hpp  OneToAllRule.hpp  RecvRule.hpp  SendRecvRule.hpp  SendRule.hpp  WaitAllRule.hpp  WaitRule.hpp
trunk/code/src/analysis/include/omp/: AnalysisParadigmOMP.hpp  IOMPRule.hpp  OMPBarrierRule.hpp  OMPComputeRule.hpp  OMPForkJoinRule.hpp  OMPParallelRegionRule.hpp  OMPTargetBarrierRule.hpp  OMPTargetRule.hpp
trunk/code/src/analysis/include/opencl/: AnalysisParadigmOpenCL.hpp  BlameKernelRule.hpp
trunk/code/src/backend/: EventStream.cpp  EventStreamGroup.cpp  Graph.cpp  GraphEngine.cpp
trunk/code/src/backend/include/: AnalysisMetric.hpp  CounterTable.hpp  EventStream.hpp  EventStreamGroup.hpp  FunctionTable.hpp  GraphEngine.hpp  common.hpp
trunk/code/src/backend/include/graph/: Edge.hpp  EventNode.hpp  Graph.hpp  GraphNode.hpp  Node.hpp
trunk/code/src/backend/include/otf/: IKeyValueList.hpp  IParallelTraceWriter.hpp  ITraceReader.hpp  ITraceWriter.hpp  OTF1ParallelTraceWriter.hpp  OTF2KeyValueList.hpp  OTF2ParallelTraceWriter.hpp  OTF2TraceReader.hpp
trunk/code/src/backend/include/utils/: ErrorUtils.hpp
trunk/code/src/backend/otf/: OTF1ParallelTraceWriter.cpp  OTF1TraceReader.cpp  OTF2ParallelTraceWriter.cpp  OTF2TraceReader.cpp
trunk/code/src/frontend/: Parser.cpp  Runner.cpp  casita.cpp
trunk/code/src/frontend/include/: Parser.hpp  Runner.hpp
trunk/code/tests/: README  run_all.sh  test_trace.pl
trunk/code/tests/generators/: Makefile  gen_mpi.c
trunk/code/tests/traces/10_scorep_mpi_tags/: profile.cubex
trunk/code/tests/traces/1_mpti_xeonphi/: scorep.cfg  traces.otf2
trunk/code/tests/traces/1_ocl_deps/: casita.def  casita.otf2  scorep.cfg  traces.def  traces.otf2
trunk/code/tests/traces/1_sptc/: scorep.cfg  traces.def  traces.otf2  traces.vsettings
trunk/code/tests/traces/1_xeonphi_jacobi_01/: traces.def
trunk/code/tests/traces/1_xeonphi_jacobi_09/: traces.otf2
trunk/code/tests/traces/2_cuda_simple/: scorep.cfg  traces.otf2
trunk/code/tests/traces/2_jacobi_blame_cpu_015/: traces.def  traces.otf2
trunk/code/tests/traces/2_jacobi_blame_gpu_005/: scorep.cfg  traces.def  traces.otf2
trunk/code/tests/traces/4_mpi_lammps_colloid/: scorep.cfg
trunk/code/tests/traces/4_mpi_ls_barr/: traces.otf2
(+366 files in other folders)
